syntax = "proto3";
package pb;

//表示目标文件生成的路径, go的包名就是最后的目录名
//目前统一生成到 app/pb 目录下
option go_package = "github.com/olaola-chat/rbp-functor/app/pb";

message AlbumRecData {
  string title = 1;         // 专辑标题
  string cover = 2;         // 专辑显示封面
  uint32 audio_total = 3;   // 专辑内音频数量
  string play_stats = 4;    // 播放量统计，服务端控制显示规则
}

message BannerRecData {
  string img_url = 1;       // banner图片资源地址
  string redirect_url = 2;  // 点击后跳转地址
}

message UserRecData {
  uint32 uid = 1;       // 用户uid
  string avatar = 2;    // 用户头像
  string name = 3;      // 用户昵称
}

message SubjectRecData {
  string title = 1;     // 专题名称
  repeated AlbumRecData albums = 2;  // 专题下专辑列表
}

message RespVoiceLoverMain {
  bool success = 1;
  string msg = 2;
  repeated AlbumRecData rec_albums = 3;
  repeated BannerRecData rec_banners = 4;
  repeated UserRecData rec_users = 5;
  repeated SubjectRecData rec_subjects = 6;
  repeated AlbumRecData common_albums = 7;
}

message RespAlbumList {
  bool success = 1;
  string msg = 2;
  repeated AlbumRecData rec_albums = 3;
}

message RespVoiceLoverPost {
  bool success = 1;
  string msg = 2;
}
